--- a/cookies_og_vilkaar.css
+++ b/cookies_og_vilkaar.css
@@ -13,7 +13,7 @@
 }
 
 body {
-    background-image: url("vilkaar_og_cookies.jpg");
+    background-image: url("bilder/vilkaar_og_cookies.jpg");
     background-size: cover;
     background-color: rgba(0,0,0, 0.5);
 }
