--- a/sjakkspill.css
+++ b/sjakkspill.css
@@ -17,26 +17,6 @@
     --RichBlack: #0D1B2A ;
 }
 
-
-/* hero section på hovedside*/
-#hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.1)), url('sjakk_header.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100vh;
-    text-align: center;
-    color: white;
-    font-weight: 100;
-    font-size: 30px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-#heroinnhold {
-    margin: 50px 300px 0px 300px;
-    font-size: 22px;
-}
-
 header>h1 {
     font-size: 80px;
 }
@@ -51,7 +31,7 @@ header > div {
 }
 
 #sjakk_side_body {
-    background-image: url("sjakk.jpg");
+    background-image: url("bilder/sjakk.jpg");
     background-size: cover;
 }
 
@@ -101,7 +81,7 @@ nav a {
     color: white;
     display: flex;
     flex-direction: column;
-    background-image: url("sjakk.jpg");
+    background-image: url("bilder/sjakk.jpg");
     background-size: cover;
     height: 45vh;
     font-size: 20px;
